ImpressCMS ChangeLog

=========================================
2008-03-02 : ImpressCMS 1.0 "Janus" RC 3
=========================================

- Improved : Improved system_redirect template in impresstheme theme (malanciault/Underdogg/davidl2)
- Improved : Improved system_siteclose template in impresstheme theme (malanciault/Underdogg/davidl2)
- Fixed : #1905281 Redirect function not using the user selected theme (malanciault)
- Added : Addition of the global navigationlink in impresstheme theme (mcdonald/skenow/malanciault)
- Added : Addition of the danish flag (anderssk)
- Added : Addition of the persian flag (malanciault)
- Added : definitions for ul and li in impresstheme (McDonald/snow/malanciault)
- Added : New module added in admin: ImpressCMS Version Checker (malanciault/nekro)

=========================================
2008-02-24 : ImpressCMS 1.0 "Janus" RC 2
=========================================

- Added : New smarty variable now available, <{$icmsLang}> representing the selected language. For example, if French is the current language selected by the user, then the value of this variable will be "french". (malanciault/davidl2)
- Fixed : Revision 955: Display issues with impresstheme. (Snow)
- Fixed : #1891588: Timezone offset empty (compatibility issue with versions of PHP aswell as operating system when using floats. (changed to an integer value instead). (vaughan</jegelstaff)
- Fixed : #1892430: Typo in language/english/user.php (malanciault/jegelstaff)


======================================
2008-02-10 : ImpressCMS 1.0 "Janus" RC
======================================

- Fixed : #1890400 Can't register new user. (seems to be a mysql version compatibility issue) (vaughan)

==========================================
2008-02-01 : ImpressCMS 1.0 "Janus" Beta 2
==========================================

- Fixed : w3c validation in impresstheme and impresstheme_light (sato-san)